frontend/src/global.css
@import url('https://use.typekit.net/sep8lvu.css');
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');

:root {
	--sans: 'Work Sans', sans-serif;
	--serif: buendia, serif;
	--site-pad: 30px;
	--headline-pad: 1.5rem;
	--inset-pad: 1rem;
	--radius: clamp(1.2rem, 3vw, 2rem);
	--color-accent: #00ffcc;
	--gray-100: #c2c2c2;
	--gray-200: #979797;
	--easing-1: cubic-bezier(0.34, 1.56, 0.64, 1);
}

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

html {
	scroll-behavior: smooth;
}

body {
	background: #fff;
	background-color: #fff;
	overflow-x: hidden;
}

img {
	width: 100%;
}

button {
	background: none;
	border: none;
	cursor: pointer;
}
.border-1 {
	border: 0.5px solid rgb(236, 236, 236);
}
.container {
	width: 100%;
	max-width: calc(850px + var(--site-pad) + var(--site-pad));
	margin: 0 auto;
	padding: 0 var(--site-pad);
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul,
ol,
li,
a,
button,
input,
textarea,
label,
span {
	font-family: var(--sans);
}

h1 {
	font-family: var(--serif);
	font-size: 3.5rem;
	line-height: 1em;
}
p {
	line-height: 1.4em;
}

.section-headline {
	font-family: var(--serif);
	font-size: 1.8em;
}
.arrow {
	width: 1em;
	height: 1em;
	margin-bottom: -0.1em;
	pointer-events: none;
}
@media (width <= 600px) {
	:root {
		--inset-pad: 0;
	}
}
.line {
	outline: none;
	position: relative;
}
.line::after,
.line:focus::after {
	content: '';
	position: absolute;
	inset: auto 50.1% -0.1em 50.1%;
	height: 0.2rem;
	border-radius: 4rem;
	background: var(--color-accent);
	transition: inset 0.1s ease;
}
.line:hover::after,
.line:focus::after {
	inset: auto 0 -0.1em 0;
}
.hidden {
	position: absolute;
	width: 1px;
	height: 1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
}
.hl_sm {
	font-size: 0.8rem;
	font-weight: 500;
	text-transform: uppercase;
	letter-spacing: 0.05em;
	color: var(--gray-200);
}
.disable-transitions * {
	transition: none !important;
}

